--- a/frontend/admin-dashboard.html
+++ b/frontend/admin-dashboard.html
@@ -359,7 +359,8 @@
                                 <h1 class="text-3xl font-bold text-gray-800">Pending Approvals</h1>
                                 <p class="text-gray-500 mt-2">Review and approve new property submissions.</p>
                             </div>
-                            <button onclick="loadPendingListings()" class="p-2 bg-white border border-gray-200 rounded-lg hover:bg-gray-50 text-gray-600">
+                            <button onclick="loadPendingListings()"
+                                class="p-2 bg-white border border-gray-200 rounded-lg hover:bg-gray-50 text-gray-600">
                                 <span class="material-symbols-outlined text-[20px]">refresh</span>
                             </button>
                         </div>
@@ -597,8 +598,8 @@
                                 </svg>
                             </span>
 
-                                <input type="text" placeholder="Search properties..."
-                                    class="w-full pl-10 pr-4 py-2 rounded-lg border border-gray-200 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 outline-none transition-all">
+                            <input type="text" placeholder="Search properties..."
+                                class="w-full pl-10 pr-4 py-2 rounded-lg border border-gray-200 focus:border-blue-500 focus:ring-2 focus:ring-blue-200 outline-none transition-all">
 
                         </div>
                         <select
@@ -996,12 +997,26 @@
                             placeholder="e.g., 50000000">
                     </div>
                     <div>
-                        <label class="block text-sm font-medium text-gray-700 mb-2">Type *</label>
+                        <label class="block text-sm font-medium text-gray-700 mb-2">Property Type *</label>
                         <select name="type" required
                             class="w-full px-4 py-2 rounded-lg border border-gray-200 focus:border-blue-500 outline-none bg-white">
                             <option value="">Select type</option>
                             <option value="SALE">For Sale</option>
                             <option value="RENT">For Rent</option>
+                            <option value="SHORT_STAY_RENTAL">Short-stay Rental</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-gray-700 mb-2">House Type</label>
+                        <select name="houseType"
+                            class="w-full px-4 py-2 rounded-lg border border-gray-200 focus:border-blue-500 outline-none bg-white">
+                            <option value="">Select house type</option>
+                            <option value="APARTMENT">Apartment</option>
+                            <option value="MANUFACTURED">Manufactured</option>
+                            <option value="HOUSE">House</option>
+                            <option value="TOWNHOME">Townhome</option>
+                            <option value="LAND">Land</option>
+                            <option value="MULTI_FAMILY">Multi-Family</option>
                         </select>
                     </div>
                 </div>
@@ -1208,6 +1223,20 @@
                             class="w-full px-4 py-2 rounded-lg border border-gray-200 focus:border-blue-500 outline-none bg-white">
                             <option value="SALE">For Sale</option>
                             <option value="RENT">For Rent</option>
+                            <option value="SHORT_STAY_RENTAL">Short-stay Rental</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-gray-700 mb-2">House Type</label>
+                        <select name="houseType" id="editHouseType"
+                            class="w-full px-4 py-2 rounded-lg border border-gray-200 focus:border-blue-500 outline-none bg-white">
+                            <option value="">Select house type</option>
+                            <option value="APARTMENT">Apartment</option>
+                            <option value="MANUFACTURED">Manufactured</option>
+                            <option value="HOUSE">House</option>
+                            <option value="TOWNHOME">Townhome</option>
+                            <option value="LAND">Land</option>
+                            <option value="MULTI_FAMILY">Multi-Family</option>
                         </select>
                     </div>
                 </div>
@@ -1507,7 +1536,8 @@
 
                     <!-- Drive Resource -->
                     <div id="viewPropertyDriveSection" class="hidden bg-blue-50 border border-blue-100 rounded-xl p-4">
-                        <h3 class="text-sm font-semibold text-blue-600 uppercase tracking-wider mb-2">Drive Resource</h3>
+                        <h3 class="text-sm font-semibold text-blue-600 uppercase tracking-wider mb-2">Drive Resource
+                        </h3>
                         <a id="viewPropertyDriveLink" href="#" target="_blank" rel="noopener noreferrer"
                             class="inline-flex items-center px-3 py-2 bg-blue-600 text-white rounded-lg text-sm font-medium hover:bg-blue-700 transition-colors">
                             Open Drive
@@ -2862,6 +2892,7 @@
                 document.getElementById('editAddress').value = property.address || '';
                 document.getElementById('editPrice').value = property.price || '';
                 document.getElementById('editType').value = property.type || 'SALE';
+                document.getElementById('editHouseType').value = property.houseType || '';
                 document.getElementById('editStatus').value = property.status || 'AVAILABLE';
                 document.getElementById('editDescription').value = property.description || '';
                 document.getElementById('editBedrooms').value = property.bedrooms || '';
@@ -2988,6 +3019,7 @@
                     address: formData.get('address'),
                     price: parseFloat(formData.get('price')),
                     type: formData.get('type'),
+                    houseType: formData.get('houseType') || null,
                     status: formData.get('status'),
                     imageUrl: formData.get('imageUrl') || null,
                     bedrooms: formData.get('bedrooms') ? parseInt(formData.get('bedrooms')) : null,
