--- a/frontend/agent-dashboard.html
+++ b/frontend/agent-dashboard.html
@@ -452,6 +452,20 @@
                             <option value="">Select type</option>
                             <option value="SALE">For Sale</option>
                             <option value="RENT">For Rent</option>
+                            <option value="SHORT_STAY_RENTAL">Short-stay Rental</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-gray-700 mb-2">House Type</label>
+                        <select name="houseType"
+                            class="w-full px-4 py-2 rounded-lg border border-gray-200 focus:border-blue-500 outline-none bg-white">
+                            <option value="">Select house type</option>
+                            <option value="APARTMENT">Apartment</option>
+                            <option value="MANUFACTURED">Manufactured</option>
+                            <option value="HOUSE">House</option>
+                            <option value="TOWNHOME">Townhome</option>
+                            <option value="LAND">Land</option>
+                            <option value="MULTI_FAMILY">Multi-Family</option>
                         </select>
                     </div>
                 </div>
