--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,9 +42,7 @@
     <div class="relative z-10">
         <div id="navbar"></div>
 
-        <!-- ============================================
-             SECTION 1: HERO & SEARCH (Stitch Screen 1)
-             ============================================ -->
+        <!-- home page - Hemal -->
         <header id="hero" class="relative min-h-screen flex items-center justify-center overflow-hidden">
             <div id="heroContent" class="relative z-20 max-w-5xl mx-auto px-6 text-center">
                 <!-- Badge -->
@@ -105,9 +103,7 @@
             </div>
         </header>
 
-        <!-- ============================================
-             SECTION 2: FEATURED LISTINGS (Stitch Screen 2)
-             ============================================ -->
+        <!-- listings - Ishan -->
         <section class="py-24 backdrop-blur-sm bg-surface/90 border-t border-white/5">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <!-- Section Header -->
@@ -125,7 +121,7 @@
                     <!-- Dynamic content loaded via JS -->
                     <div class="featured-card glass rounded-2xl overflow-hidden group">
                         <div class="relative h-64 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1600596542815-ffad4c1539a9?w=600" alt="Property"
+                            <img src="http://localhost:5173/uploads/properties/HomePage/skyview.webp" alt="Property"
                                 class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                             <div class="absolute top-4 left-4">
                                 <span
@@ -157,7 +153,7 @@
 
                     <div class="featured-card glass rounded-2xl overflow-hidden group">
                         <div class="relative h-64 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=600" alt="Property"
+                            <img src="http://localhost:5173/uploads/properties/thalawathugoda/main.webp?w=8000" alt="Property"
                                 class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                             <div class="absolute top-4 left-4">
                                 <span
@@ -189,7 +185,7 @@
 
                     <div class="featured-card glass rounded-2xl overflow-hidden group">
                         <div class="relative h-64 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1600607687939-ce8a6c25118c?w=600" alt="Property"
+                            <img src="http://localhost:5173/uploads/properties/HomePage/studio.webp?w=600" alt="Property"
                                 class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                             <div class="absolute top-4 left-4">
                                 <span
@@ -221,7 +217,7 @@
 
                     <div class="featured-card glass rounded-2xl overflow-hidden group">
                         <div class="relative h-64 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1600566753190-17f0baa2a6c3?w=600" alt="Property"
+                            <img src="http://localhost:5173/uploads/properties/HomePage/estate.webp" alt="Property"
                                 class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                             <div class="absolute top-4 left-4">
                                 <span
@@ -253,7 +249,7 @@
 
                     <div class="featured-card glass rounded-2xl overflow-hidden group">
                         <div class="relative h-64 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?w=600" alt="Property"
+                            <img src="http://localhost:5173/uploads/properties/HomePage/villa.webp" alt="Property"
                                 class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                             <div class="absolute top-4 left-4">
                                 <span
@@ -285,7 +281,7 @@
 
                     <div class="featured-card glass rounded-2xl overflow-hidden group">
                         <div class="relative h-64 overflow-hidden">
-                            <img src="https://images.unsplash.com/photo-1497366216548-37526070297c?w=600" alt="Property"
+                            <img src="http://localhost:5173/uploads/properties/HomePage/office.webp" alt="Property"
                                 class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                             <div class="absolute top-4 left-4">
                                 <span
