--- a/frontend/properties.html
+++ b/frontend/properties.html
@@ -21,7 +21,7 @@
 
             <!-- Filter Section -->
             <div class="mb-10 p-6 rounded-2xl bg-white/5 backdrop-blur-xl border border-white/10 shadow-2xl">
-                <div class="relative">
+                <div class="relative mb-4">
                     <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
                         <svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
                             fill="currentColor" aria-hidden="true">
@@ -32,6 +32,31 @@
                     </div>
                     <input type="text" id="searchInput" placeholder="Search by location, title, or keyword..."
                         class="w-full pl-10 px-4 py-3 bg-white/5 border border-white/10 rounded-xl text-white placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-primary/50 focus:border-primary transition-all duration-300 backdrop-blur-md">
+                </div>
+                <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+                    <div>
+                        <label class="block text-xs font-medium text-gray-400 mb-1">Property Type</label>
+                        <select id="filterType"
+                            class="w-full px-4 py-2.5 bg-white/5 border border-white/10 rounded-xl text-white focus:outline-none focus:ring-2 focus:ring-primary/50 focus:border-primary transition-all backdrop-blur-md">
+                            <option value="" class="bg-[#111]">All Types</option>
+                            <option value="SALE" class="bg-[#111]">For Sale</option>
+                            <option value="RENT" class="bg-[#111]">For Rent</option>
+                            <option value="SHORT_STAY_RENTAL" class="bg-[#111]">Short-stay Rental</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label class="block text-xs font-medium text-gray-400 mb-1">House Type</label>
+                        <select id="filterHouseType"
+                            class="w-full px-4 py-2.5 bg-white/5 border border-white/10 rounded-xl text-white focus:outline-none focus:ring-2 focus:ring-primary/50 focus:border-primary transition-all backdrop-blur-md">
+                            <option value="" class="bg-[#111]">All House Types</option>
+                            <option value="APARTMENT" class="bg-[#111]">Apartment</option>
+                            <option value="MANUFACTURED" class="bg-[#111]">Manufactured</option>
+                            <option value="HOUSE" class="bg-[#111]">House</option>
+                            <option value="TOWNHOME" class="bg-[#111]">Townhome</option>
+                            <option value="LAND" class="bg-[#111]">Land</option>
+                            <option value="MULTI_FAMILY" class="bg-[#111]">Multi-Family</option>
+                        </select>
+                    </div>
                 </div>
             </div>
 
@@ -65,9 +90,9 @@
 
         // Get type badge
         const getTypeBadge = (type) => {
-            return type === 'RENT'
-                ? { bg: 'bg-cyan-500', label: 'For Rent' }
-                : { bg: 'bg-primary', label: 'For Sale' };
+            if (type === 'RENT') return { bg: 'bg-cyan-500', label: 'For Rent' };
+            if (type === 'SHORT_STAY_RENTAL') return { bg: 'bg-amber-500', label: 'Short-stay' };
+            return { bg: 'bg-primary', label: 'For Sale' };
         };
 
         const renderProperties = (properties) => {
@@ -200,10 +225,42 @@
             `}).join('');
         };
 
+        let allProperties = [];
+
+        const filterType = document.getElementById('filterType');
+        const filterHouseType = document.getElementById('filterHouseType');
+
+        const applyFilters = () => {
+            const query = searchInput.value.toLowerCase().trim();
+            const typeVal = filterType.value;
+            const houseTypeVal = filterHouseType.value;
+
+            let filtered = allProperties;
+
+            if (query.length > 0) {
+                filtered = filtered.filter(p =>
+                    (p.title && p.title.toLowerCase().includes(query)) ||
+                    (p.address && p.address.toLowerCase().includes(query)) ||
+                    (p.description && p.description.toLowerCase().includes(query))
+                );
+            }
+
+            if (typeVal) {
+                filtered = filtered.filter(p => p.type === typeVal);
+            }
+
+            if (houseTypeVal) {
+                filtered = filtered.filter(p => p.houseType === houseTypeVal);
+            }
+
+            renderProperties(filtered);
+        };
+
         const loadProperties = async () => {
             try {
                 const response = await propertyApi.getAll();
-                renderProperties(response.data);
+                allProperties = response.data;
+                renderProperties(allProperties);
             } catch (error) {
                 console.error('Error loading properties:', error);
                 grid.innerHTML = `
@@ -218,19 +275,9 @@
             }
         };
 
-        searchInput.addEventListener('input', async (e) => {
-            const query = e.target.value;
-            if (query.length > 2) {
-                try {
-                    const response = await propertyApi.search(query);
-                    renderProperties(response.data);
-                } catch (error) {
-                    console.error('Search error:', error);
-                }
-            } else if (query.length === 0) {
-                loadProperties();
-            }
-        });
+        searchInput.addEventListener('input', () => applyFilters());
+        filterType.addEventListener('change', () => applyFilters());
+        filterHouseType.addEventListener('change', () => applyFilters());
 
         // Add fade-in styles dynamically
         const style = document.createElement('style');
@@ -251,14 +298,14 @@
         document.head.appendChild(style);
 
         // Handle save button click
-        window.handleSaveClick = function(btn, propertyId) {
+        window.handleSaveClick = function (btn, propertyId) {
             if (!window.toggleSavedProperty) {
                 alert('Please wait, page is loading...');
                 return;
             }
-            
+
             const isSaved = window.toggleSavedProperty(propertyId);
-            
+
             if (isSaved) {
                 btn.classList.add('is-saved');
             } else {
