--- a/frontend/sell-property.html
+++ b/frontend/sell-property.html
@@ -227,7 +227,7 @@
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
                 <button id="startListingBtn"
                     class="btn-primary py-4 px-8 text-lg flex items-center justify-center gap-2 shadow-lg shadow-primary/20 hover:scale-105 transition-transform">
-                    <span>🚀</span>
+                    <span></span>
                     List Property Now
                 </button>
             </div>
