Refactor agent filtering and event listeners

--- a/frontend/agents.html
+++ b/frontend/agents.html
@@ -240,7 +240,7 @@
             document.getElementById('spotlightContactBtn').href = `/agent-profile.html?id=${top.id}`;
         }
 
-        // Filter agents
+        
         function applyFilters() {
             const searchTerm = searchInput.value.toLowerCase();
             const locationVal = locationFilter.value;
@@ -346,7 +346,7 @@
             }
         }
 
-        // Event listeners
+        
         searchInput.addEventListener('input', applyFilters);
         locationFilter.addEventListener('change', applyFilters);
         specializationFilter.addEventListener('change', applyFilters);
@@ -355,4 +355,4 @@
     </script>
 </body>
 
-</html>
+</html
